--- a/book/listings/Cargo.toml
+++ b/book/listings/Cargo.toml
@@ -69,6 +69,14 @@ path = "css/6/main.rs"
 name = "css_7"
 path = "css/7/main.rs"
 
+[[bin]]
+name = "css_8"
+path = "css/8/main.rs"
+
+[[bin]]
+name = "css_9"
+path = "css/9/main.rs"
+
 # gobject_memory_management
 [[bin]]
 name = "gobject_memory_management_1"
