--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -67,4 +67,5 @@ jobs:
         with:
           check_filenames: true
           path: book
-          ignore_words_list: "crate"
+          ignore_words_list: crate
+          skip: *.svg
