Try why book workflow is not running

--- a/.github/workflows/book.yml
+++ b/.github/workflows/book.yml
@@ -67,5 +67,5 @@ jobs:
         with:
           check_filenames: true
           path: book
-          ignore_words_list: crate
-          skip: *.svg
+          ignore_words_list: "crate"
+          skip: "*.svg"
